Attempt to fix overscrolling on mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
     padding-bottom: 60px;
 }
 
+html {
+    overscroll-behavior: none;
+}
+
 .content {
 }
 
